--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,18 +10,35 @@ jobs:
   windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: PyO3/maturin-action@v1
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Build wheels
+      uses: PyO3/maturin-action@v1
       with:
         command: build
         args: -m zbl_py/Cargo.toml --release -o dist --find-interpreter
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: dist
+        path: dist
+  publish:
+    needs:
+    - windows
+    runs-on: ubuntu-latest
+    steps:
+    - name: Get artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: dist
+        path: dist
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: dist/*
     - name: Publish package to PyPI
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
