--- a/zbl/Cargo.toml
+++ b/zbl/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "zbl"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 [lib]
 name = "zbl"
 
 [dependencies]
-lazy_static = "1"
+once_cell = "1"
 
 [dependencies.windows]
+# TODO bumping the version brings on weird API which i'm not sure how to work with
 version = "0.43"
 features = [
     "Foundation",
@@ -31,4 +32,4 @@ features = [
 
 [dev-dependencies]
 clap = { version = "4", features = ["derive"] }
-opencv = "0.82"
+opencv = "0.88"
