--- a/zbl_py/pyproject.toml
+++ b/zbl_py/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "zbl"
-version = "0.1.1"
+version = "0.1.2"
 readme = "../README.md"
 requires-python = ">=3.7"
 license = { file = "../LICENSE.txt" }
@@ -13,9 +13,7 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-example = [
-    "opencv-python~=4.6.0"
-]
+example = ["opencv-python~=4.6.0"]
 
 [build-system]
 requires = ["maturin>=0.13,<0.14"]
