--- a/zbl_py/pyproject.toml
+++ b/zbl_py/pyproject.toml
@@ -28,5 +28,5 @@ Repository = "https://github.com/modelflat/zbl"
 example = ["opencv-python~=4.6.0"]
 
 [build-system]
-requires = ["maturin>=0.13,<0.14"]
+requires = ["maturin"]
 build-backend = "maturin"
