chore: cargo update

--- a/zbl_py/Cargo.toml
+++ b/zbl_py/Cargo.toml
@@ -12,5 +12,8 @@ zbl = { path = "../zbl", default-features = false }
 thiserror = "1"
 
 [dependencies.pyo3]
-version = "0.20"
+version = "0.21"
 features = ["extension-module"]
+
+[profile.release]
+strip = true
