chore: rust->1.85 + cleanup

--- a/zbl_py/pyproject.toml
+++ b/zbl_py/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "zbl"
 description = "real-time window capture library based on D3D11 and Windows.Graphics.Capture"
-version = "0.6.2"
+version = "0.6.3"
 readme = "../README.md"
 requires-python = ">=3.9"
 license = { file = "../LICENSE.txt" }
 keywords = ["windows", "d3d11", "window-capture", "graphics-capture", "cv"]
 dependencies = ["numpy"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Programming Language :: Rust",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 [project.urls]
