--- a/zbl_py/pyproject.toml
+++ b/zbl_py/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "zbl"
 description = "real-time window capture library based on D3D11 and Windows.Graphics.Capture"
-version = "0.6.4"
+version = "0.7.0"
 readme = "../README.md"
 requires-python = ">=3.9"
 license = { file = "../LICENSE.txt" }
@@ -24,7 +24,7 @@ Homepage = "https://github.com/modelflat/zbl"
 Repository = "https://github.com/modelflat/zbl"
 
 [project.optional-dependencies]
-example = ["opencv-python~=4.6.0"]
+cli = ["opencv-python~=4.6.0"]
 
 [build-system]
 requires = ["maturin>=1.0,<2.0"]
